<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layoutDirection="ltr"
    tools:context=".TaskCreation">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_priority"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingHorizontal="64dp">
        <View android:id="@+id/priority_red"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/priority_red"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"/>
        <View android:id="@+id/priority_yellow"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/priority_yellow"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"/>
        <View android:id="@+id/priority_turquoise"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/priority_turquoise"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"/>
        <View android:id="@+id/priority_green"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:background="@color/priority_green"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_name"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"/>
    <EditText android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_date_and_time"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingHorizontal="64dp">
            <EditText android:id="@+id/task_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/day"
                android:textAlignment="center"
                android:inputType="number"/>
            <EditText android:id="@+id/task_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/month"
                android:textAlignment="center"
                android:inputType="number"/>
            <EditText android:id="@+id/task_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/year"
                android:textAlignment="center"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingHorizontal="64dp">
            <EditText android:id="@+id/task_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hour"
                android:textAlignment="center"
                android:inputType="number"/>
            <EditText android:id="@+id/task_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/minute"
                android:textAlignment="center"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_location"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"/>
    <EditText android:id="@+id/task_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_description"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"/>
    <EditText android:id="@+id/task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>
    <Button android:id="@+id/task_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:background="#00ff55"
        android:layout_gravity="center"/>
</LinearLayout>